@@ -1,3 +1,6 @@
+2017-12-14  Markus Gans  <guru.mail@muenster.de>
+	* Add Sun Microsystems workstation console support
+
 2017-12-10  Markus Gans  <guru.mail@muenster.de>
 	* Refactoring of the FMenu mouse event handler
 
